added card hovers

--- a/index.html
+++ b/index.html
@@ -65,18 +65,48 @@
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
     </div>
-    <section
-      style="
-        width: 100%;
-        height: 50vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      "
-    >
-      <h3 style="font-size: 3rem">Kolliflower</h3>
-    </section>
-
+    
+    <div class="center">
+      <div class="cards-hover-container">
+        <div class="yoda">
+          <img class="logo" src="images/kolliflower.png" alt="" />
+          <img
+            class="front-image"
+            src="images/hover-1.png"
+            alt="yoda holding his lightsaber up, the glow highlighting an angry look on his face" />
+          <img
+            class="bg-image"
+            src="images/card-2.jpg"
+            alt="yoda looking peaceful on dagobah" />
+        </div>
+      </div>
+      <div class="cards-hover-container">
+        <div class="yoda">
+          <img class="logo" src="images/kolliflower.png" alt="" />
+          <img
+            class="front-image"
+            src="images/hover-2.png"
+            alt="yoda holding his lightsaber up, the glow highlighting an angry look on his face" />
+          <img
+            class="bg-image"
+            src="images/card-4.jpg"
+            alt="yoda looking peaceful on dagobah" />
+        </div>
+      </div>
+      <div class="cards-hover-container">
+        <div class="yoda">
+          <img class="logo" src="images/kolliflower.png" alt="" />
+          <img
+            class="front-image"
+            src="images/hover-3.png"
+            alt="yoda holding his lightsaber up, the glow highlighting an angry look on his face" />
+          <img
+            class="bg-image"
+            src="images/card-1.jpg"
+            alt="yoda looking peaceful on dagobah" />
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="app.js"></script>
